# socviz-polars

./: .gitignore  .nojekyll  01-look-at-data.html  01-look-at-data.qmd  02-intro.html  02-intro.qmd  03-ggplot-basics.html  03-ggplot-basics.qmd  04-group-facet-transform.html  04-group-facet-transform.qmd  05-more-on-geoms.html  05-more-on-geoms.qmd  06-modeling.html  06-modeling.qmd  07-maps.html  07-maps.qmd  08-polishing.html  08-polishing.qmd  AGENTS.md  README.md  _quarto.yml  appendix-map-data.html  appendix-map-data.qmd  custom.css  index.html  index.qmd  pyproject.toml  references.bib  references.html  search.json
_freeze/02-intro/execute-results/: html.json
_freeze/03-ggplot-basics/execute-results/: html.json
_freeze/05-more-on-geoms/execute-results/: html.json
data/: README.md  county_data.parquet  county_map.parquet  election.parquet  election24.parquet  elections_historic.parquet  gss_sm.parquet  oecd_sum.parquet  opiates.parquet  organdata.parquet  titanic.parquet  us_states.parquet
site_libs/bootstrap/: bootstrap-c0f9e757bd1bbe5faf3da83a888945c0.min.css  bootstrap-dark-91459808351f4a5e66f61f3cc0ad5ca1.min.css
socviz_pl/: __init__.py  data.py  plots.py
