[project]
name = "socviz-polars"
version = "0.1.0"
requires-python = ">= 3.12"
dependencies = [
    "adjusttext>=1.3.0",
    "duckdb>=1.5.2",
    "geodatasets>=2026.1.0",
    "jupyter>=1.1.1",
    "numpy>=2.4.4",
    "plotnine-polars>=0.2.0",
    "polars[pyarrow]>=1.39.3",
    "pyproj>=3.7.2",
    "pyyaml>=6.0.3",
    "quarto>=0.1.0",
    "scikit-misc",
    "socviz-py>=0.0.3",
    "statsmodels>=0.14.6",
]

[tool.uv.sources]
socviz-py = { git = "https://github.com/iangow/socviz_py.git" }
# socviz-py = { path = "/Users/igow/git/socviz_py", editable = true }
plotnine-polars = { path = "/Users/igow/git/plotnine_polars", editable = true }
